Added migration + registration / login system and styled main page

--- a/UNFORGOTTEN/Server/appsettings.json
+++ b/UNFORGOTTEN/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UNFORGOTTEN.Server-ddbdad9f-5ca8-4ae2-9a26-b47031813693;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=UNFORGOTTEN;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
